<resources>
    <string name="app_name">Board</string>
    <string name="server_adress">http://3.113.99.134:8000/</string>
<!--    <string name="server_adress">http://172.30.1.45:8000</string>-->
    <string name="server_adress_inner">http://172.30.1.45:8000</string>
<!--    <string name="ad_post">ca-app-pub-6471197578074134/3295987809</string>-->
<!--    <string name="ad_post_list">ca-app-pub-6471197578074134/3144229978</string>-->
    <string name="ad_post">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_post_list">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="auto_login_id"></string>
    <string name="auto_login_password"></string>
    <string name="id_rule">Please enter no more than 15 numbers or letters without spaces.</string>
    <string name="pw_rule">Please enter no more than 15 numbers or letters without spaces.</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="signout">Sign Out</string>
    <string name="find_id">Find ID</string>
    <string name="find_pw">Find PW</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title">Please enter your title</string>
    <string name="enter_content">Please enter your content</string>
    <string name="exit_info">Are you sure you want to quit?</string>
    <string name="logout_info">Are you sure you want to sign out?</string>
    <string name="signup_info">I agree with the app "Terms and Conditions" and "Personal Information Processing Policy".</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="processing_policy">Personal Information Processing Policy</string>
    <string name="signup_check_rule">You must agree to the terms and conditions first.</string>
    <string name="exist_id">The ID that already exists.</string>
    <string name="report">Report, Block</string>
    <string name="report_list_1">Objectionable content</string>
    <string name="report_list_2">Spreading false information</string>
    <string name="report_list_3">Unauthorized advertising/promotion</string>
    <string name="deleted">Deleted</string>
    <string name="authormiss">Author disagreement</string>
    <string name="backpress">Press the back button once more to exit.</string>
    <string name="serverfail">Server connection failure</string>
    <string name="autologin">Automatic login successful</string>
    <string name="autologinfail">Automatic login failed</string>
    <string name="writesuccess">writing success</string>
    <string name="titlelong">Please write the title with at least 1 character and no more than 25 characters.</string>
    <string name="contentlong">Please write the content with at least 1 character and no more than 100 characters.</string>
    <string name="loginsuccess">log-in succeed</string>
    <string name="checkid">please check your account</string>
    <string name="checkpw">please check your password</string>
    <string name="terms_use">https://sites.google.com/view/boardrodlswjdqh/%ED%99%88</string>
    <string name="delete_info">Are you sure you want to delete?</string>
    <string name="delete">delete</string>
    <string name="reports">report</string>
</resources>