<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/semo"
        android:visibility="gone"
        android:id="@+id/semo">
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="loading..."
        android:visibility="gone"
        android:id="@+id/loading">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/loginView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:padding="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=" ID"
                android:id="@+id/userid">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/id_rule"
                android:id="@+id/id_rule"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=" Password"
                android:inputType="textPassword"
                android:id="@+id/userpassward">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw_rule"
                android:visibility="gone"
                android:id="@+id/pw_rule"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/login_button"
                android:id="@+id/login">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="9">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:layout_weight="3"
                android:background="@drawable/transparent_button"
                android:id="@+id/signup"
                android:textColor="?attr/colorOnSecondary">

            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_id"
                android:textAllCaps="false"
                android:layout_weight="3"
                android:background="@drawable/transparent_button"
                android:textColor="?attr/colorOnSecondary">

            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_pw"
                android:textAllCaps="false"
                android:layout_weight="3"
                android:background="@drawable/transparent_button"
                android:textColor="?attr/colorOnSecondary">

            </Button>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>